--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,33 @@
+a.active.focus,
+a.active:focus,
+a.focus,
+a:active.focus,
+a:active:focus,
+a:focus,
+button.active.focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button:active:focus,
+button:focus,
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus {
+    outline: 0!important;
+    outline-color: transparent!important;
+    outline-width: 0!important;
+    outline-style: none!important;
+    box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
+}
+.color-blue {
+    color: rgb(0, 82, 158);
+}
+.color-white {
+    color: white;
+}
 .button-round {
     transition: .1s;
     margin-top: 50px;
@@ -33,7 +63,14 @@
     z-index: 1;
     width: 80px;
     padding: 0 10px;
+}
+.items-back {
     background-color: rgb(0, 82, 158);
+    transition: .2s;
+}
+.items-back-white {
+    background-color: white;
+    transition: .2s;
 }
 .logo img {
     width: 100%;
@@ -52,7 +89,6 @@
 }
 .menu-opener-button span {
     margin: 10px;
-    color: white;
     font-size: 30px;
 }
 .header_video-background-box {
@@ -106,9 +142,9 @@
     display: flex;
     justify-content: center;
     z-index: 2;
+    transition: .2s;
 }
 .next-page-btn span {
-    color: white;
     font-size: 40px;
 }
 .video-modal {
@@ -144,4 +180,7 @@
 }
 .modal {
     background-color: black;
+}
+#footer {
+    background-color: rgb(0, 82, 158);
 }
