--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,39 @@ button:focus,
     border: none;
     background: none;
 }
+.btn-sliders {
+    position: relative;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 5px 15px;
+    width: fit-content;
+    height: fit-content;
+}
+.btn-sliders-back {
+    position: absolute;
+    border-radius: 10px;
+    top: 0;
+    left: 0;
+    width: calc(100% + 15px);
+    height: 100%;
+    z-index: -1;
+    padding-right: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.btn-sliders:hover .btn-sliders-back {
+    background-color: rgb(229, 240, 250);
+    animation-name: btn-hover;
+    animation-duration: .3s;
+    animation-fill-mode: forwards;
+}
+@keyframes btn-hover {
+    100% {
+        width: calc(100% + 25px);
+    }
+}
 .btn-up {
     transition: .2s;
 }
@@ -167,7 +200,6 @@ button:focus,
 }
 .video-modal-video {
     width: 100%;
-    height: auto;
 }
 .close-button {
     position: absolute;
@@ -181,6 +213,75 @@ button:focus,
 .modal {
     background-color: black;
 }
+.section-image-box {
+    position: relative;
+    height: 100vh;
+    width: calc(100% + 15px);
+    overflow: hidden;
+}
+.section-image {
+    margin-left: -235%;
+}
+.collapse-left {
+    animation-name: collapseFromLeft;
+    animation-duration: 1.5s;
+    animation-fill-mode:forwards;
+}
+@keyframes collapseFromLeft {
+    100% {
+        margin-left: 0;
+    }
+}
+.white-cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.8;
+}
+.about-us {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 82, 158, .8);
+}
+.about-us_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 55%;
+    border-radius: 2vw;
+    color: white;
+    transition: 2s;
+}
+.about-us_text p {
+    font-size: 1.7vw;
+    font-weight: 400;
+}
+.d-none {
+    transition: 2s;
+}
 #footer {
     background-color: rgb(0, 82, 158);
 }
+.slider-header {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 5vw;
+}
+.slider-subheader {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 2vw;
+}
+p {
+    text-align: center;
+}
+
